@@ -496,6 +496,7 @@ All (GUI):
 - Add wxComboBox::Popup() and Dismiss() methods (Igor Korot).
 - Added wxTreeCtrl::SelectChildren() (Nikolay Tjushkov).
 - Show pages icons in window list menu in wxAuiNotebook (Ronny Krüger).
+- Add "initial selection" parameter to wxGetSingleChoice() (Nikolay Tjushkov).
 
 GTK:
 
